--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <input type = 'text' id='test' placeholder='Date' class='form-control ml-2 mt-3'>
     <button class="btn btn-info ml-2 mt-3" id="button" onclick="table()">Enter</button>
     <button class="btn btn-info ml-2 mt-3" id="button" onclick="clear()">Clear</button>
+    <p>Query Example: 26 Apr / Weekday Month </p>
       </div>
       <br>
     <div id="clear" class="container">
