--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head> 
 <!--********Body starts*************        -->
   <body>
-      <div class="form-inline">
+      <div class="container form-inline">
     <input type = 'text' id='test' placeholder='Date' class='form-control ml-2 mt-3'>
     <button class="btn btn-info ml-2 mt-3" id="button" onclick="table()">Enter</button>
     <button class="btn btn-info ml-2 mt-3" id="button" onclick="clear()">Clear</button>
-    <p>Query Example: 26 Apr / Weekday Month </p>
+    <p class="mt-3 ml-3">Query Example: 26 Apr / Weekday Month </p>
       </div>
       <br>
     <div id="clear" class="container">
