--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
             <tr>
 <!--            <th scope="col">Id</th>-->
             <th scope="col">User</th>
-            <th scope="col">login</th>
-            <th scope="col">logout</th>
-            <th scope="col">total</th>
-            <th scope="col">lunch</th>
-            <th scope="col">break</th>
-            <th scope="col">project</th>
+            <th scope="col">Login</th>
+            <th scope="col">Logout</th>
+            <th scope="col">Total</th>
+            <th scope="col">Available</th>
+            <th scope="col">Lunch</th>
+            <th scope="col">Break</th>
+            <th scope="col">Project</th>
           </tr>
         </thead>
         <tbody id="table">
