--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
       </div>
       <br>
     <div id="clear" class="container">
-        <table class="table">
+        <table  class="table">
             <thead>
             <tr>
 <!--            <th scope="col">Id</th>-->
             <th scope="col">User</th>
-            <th scope="col">Login</th>
-            <th scope="col">Logout</th>
-            <th scope="col">Total</th>
+            <!-- <th scope="col">Login</th>
+            <th scope="col">Logout</th> -->
+            <!-- <th scope="col">Total</th> -->
             <th scope="col">Available</th>
-            <th scope="col">Lunch</th>
+            <!-- <th scope="col">Lunch</th> -->
             <th scope="col">Break</th>
-            <th scope="col">Project</th>
+            <!-- <th scope="col">Project</th> -->
           </tr>
         </thead>
         <tbody id="table">
